--- a/VSExtensionsImportExport/VSExtensionsImportExport.csproj
+++ b/VSExtensionsImportExport/VSExtensionsImportExport.csproj
@@ -69,6 +69,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Windows.Forms" />
