--- a/VSExtensionsImportExport/ExportExtensions.csproj
+++ b/VSExtensionsImportExport/ExportExtensions.csproj
@@ -14,8 +14,8 @@
     <ProjectTypeGuids>{82b43b9b-a64c-4715-b499-d71e9ca2bd60};{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TTRider.VSExtensionsImportExport</RootNamespace>
-    <AssemblyName>VSExtensionsImportExport</AssemblyName>
+    <RootNamespace>TTRider.ExportExtensions</RootNamespace>
+    <AssemblyName>ExportExtensions</AssemblyName>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>Key.snk</AssemblyOriginatorKeyFile>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
@@ -69,6 +69,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Windows.Forms" />
@@ -161,6 +162,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <EmbeddedResource Include="templates\header.template" />
     <None Include="Service References\ExtensionService\Extension.wsdl" />
     <None Include="Service References\ExtensionService\Extension.xsd">
       <SubType>Designer</SubType>
@@ -177,15 +179,17 @@
     <None Include="Service References\ExtensionService\Extension4.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\ExtensionService\TTRider.VSExtensionsImportExport.ExtensionService.IdeCategory.datasource">
+    <None Include="Service References\ExtensionService\TTRider.ExportExtensions.ExtensionService.IdeCategory.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Service References\ExtensionService\TTRider.VSExtensionsImportExport.ExtensionService.ReleaseQueryResult.datasource">
+    <None Include="Service References\ExtensionService\TTRider.ExportExtensions.ExtensionService.ReleaseQueryResult.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
     </None>
+    <EmbeddedResource Include="templates\footer.template" />
+    <EmbeddedResource Include="templates\ps.template" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Key.snk" />
