--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@ Temporary Items
 /VSExtensionsImportExport/bin/Release
 /VSExtensionsImportExport/obj/Release/TempPE
 /VSExtensionsImportExport/obj/Release
+/ExportExtensions/bin
+/ExportExtensions/obj
